[package]
name = "tcplinecombine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-compression = { version = "0.3.15", features = ["tokio", "zstd"] }
bytes = "1.3.0"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros", "net", "rt", "fs", "io-util", "time", "sync"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
xflags = "0.3.1"
